# amplifier-module-provider-chat-completions

./: .gitignore  README.md  pyproject.toml
amplifier_module_provider_chat_completions/: __init__.py  _server_probe.py
tests/: conftest.py  test_behavioral.py  test_context_window_config.py  test_error_translation.py  test_integration.py  test_provider.py  test_server_probe.py
