[project]
name = "amplifier-module-provider-chat-completions"
version = "1.0.0"
description = "Amplifier provider module for servers implementing the OpenAI Chat Completions wire format (llama.cpp, vLLM, SGLang, LM Studio, LocalAI, text-generation-inference, etc.)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-chat-completions = "amplifier_module_provider_chat_completions:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_chat_completions",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core>=1.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.14.10",
]
